update player uses uuid, use correct name for score
